--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 <body class="w3-content" style="max-width:1000px">
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-bar-block w3-cyan w3-collapse w3-top w3-right" style="z-index:3;width:150px" id="mySidebar">
+<nav class="w3-sidebar w3-bar-block w3-Teal w3-collapse w3-top w3-right" style="z-index:3;width:150px" id="mySidebar">
   <div class="w3-container w3-display-container w3-blue w3-padding-16">
     <h3><b>Tongtong Liang</b></h3>
   </div>
-  <div class="w3-padding-64 w3-text-light-grey w3-large w3-cyan" style="font-weight:bold">
+  <div class="w3-padding-64 w3-text-light-grey w3-large w3-Teal" style="font-weight:bold">
     <a href="#home" class="w3-bar-item w3-button">Home</a>
     <a href="#research interests" class="w3-bar-item w3-button">Reserach Interests</a>
     <a href="#survey" class="w3-bar-item w3-button">Survey</a>
@@ -73,7 +73,7 @@
 </nav>
 
 <!-- Top menu on small screens -->
-<header class="w3-bar w3-top w3-hide-large w3-cyan w3-xlarge">
+<header class="w3-bar w3-top w3-hide-large w3-Teal w3-xlarge">
   <div class="w3-bar-item w3-padding-24">Tongtong Liang</div>
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-padding-24 w3-right"  style="font-stretch: extra-expanded;" onclick="w3_open()"><b>≡</b></a>
   </div>
