--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   </style>
 
-  <link rel="icon" type="image/png" href="images/icons.png">
+  <link rel="icon" type="image/png" href="images/sustech3.png">
   <!--
   <script src="jquery.min.js"></script>
   <script>
@@ -58,7 +58,7 @@
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-teal w3-collapse w3-top w3-right" style="z-index:3;width:150px" id="mySidebar">
-  <div class="w3-container w3-display-container w3-blue w3-padding-16">
+  <div class="w3-container w3-display-container w3-teal w3-padding-16">
     <h3><b>Tongtong Liang</b></h3>
   </div>
   <div class="w3-padding-64 w3-text-light-grey w3-large w3-teal" style="font-weight:bold">
@@ -90,7 +90,7 @@
 
 <!-- The Home Section -->
     <div class="w3-container w3-center w3-padding-32" id="home">
-      <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/Yunhe_new.jpg">
+      <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/Mypicture.jpg">
       <h1>Tongtong Liang</h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
           I am a senior student at <a href="https://math.sustech.edu.cn/index.html?lang=en">Department of Mathematics </a> in <a href="https://math.sustech.edu.cn/?lang=en">Southern University of Science and Technology</a>(SUSTech), Shenzhen (2017-2021) andI will be a master student at Department of mathematics in SUSTech from 2021 to 2022. My ungraduate advisor and master advisor is <a href="https://yifeizhu.github.io/" target="_blank">
@@ -133,7 +133,7 @@
         This is my undergraduate thesis.
         </p> 
 
-        
+       <\div> 
   
   <!-- The Talks Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="talks">
