--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
   </div>
 <!-- The Projects Section -->
-  <div class="w3-container w3-padding-32" id="Survey">
+  <div class="w3-container w3-padding-32" id="survey">
     <h2>Survey</h2>
     <p class="w3-justify">
         
@@ -127,10 +127,24 @@
 
         <h4><li>The Steenrod Squares Encodes the Data of Homotopy Coherent Structures</li></h4>
         <p class="w3-justify">
-         <a style="color: #447ec9" href="https://arxiv.org/pdf/2101.10015.pdf">Download document</a>
+         <a style="color: #447ec9" href="data/The Steenrod Squares Encode the Data of Homotopy Coherent Structures (2).pdf">Download document</a>
         </p>
         <p class="w3-justify">
-        This is my undergraduate thesis.
+          In algebraic topology, one often encounters diagrams of spaces
+that are commutative up to homotopy, rather than strictly commutative. However,
+by passing to the homotopy category, one loses the information of higher
+homotopies. This makes the corresponding algebraic invariants less effective
+to distinguish spaces. To give a more faithful algebraic picture for a geometric
+problem, it is desirable to devise machineries that capture higher homotopies.
+In this thesis, I show how the cup-i products and the Steenrod squares encode
+the data of higher homotopy types. From this perspective, I explain why the
+Steenrod squares and, more generally, cohomology operations for generalized
+cohomology theories work effectively as algebraic invariants for spaces￿in an
+attempt to understand the raison d’être of infinity-categorical algebra. This
+is based on investigating the literature and reorganizing theoretical and computational
+aspects of important tools in algebraic topology into an organic
+entirety through the theme of homotopy coherence. These include cohomology
+operations, simplicial sets, classifying spaces, and spectral sequences.
         </p> 
 
        <\div> 
