--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
         messageStyle: "none"
     });
 </script>
-————————————————
-版权声明：本文为CSDN博主「lijiancheng0614」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
-原文链接：https://blog.csdn.net/LiJiancheng0614/article/details/47069817
-<head>
+
 
   <title>Tongtong Liang's Homepage</title>
 
@@ -162,7 +159,8 @@ operations, simplicial sets, classifying spaces, and spectral sequences.
               This is a survey on the Grothendieck-Riemann-Roch theorem.
 The idea of this article is to show that K-
 theory is the universal cohomology theory with multiplicative law $x+y-xy+\infty$ ,
-then Grothendieck-Riemann-Roch theorem follows the result.<\p>
+then Grothendieck-Riemann-Roch theorem follows the result.
+              <\p>
 
   
   <!-- The Talks Section -->
