--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
    <h2>Research Interests</h2>
       <p> I am insterested in algebraic topology, algebraic geoemtry, mathematical physics and their related fields. Especially, I am concerned about cohomology operations and their applications in these fields. The concrete interests are listed as follows</p>
       <p><li>Operad theory and higher algebra </li></p>
-      <p><li>Motivic homotopy theory and motivic cohomology </li></p>
+      <p><li>Motivic homotopy theory </li></p>
       <p><li>K-theory </li></p>
       <p><li>Goodwillie calculus </li></p>
       <p><li>Factorization homology and TQFT </li></p>
@@ -155,12 +155,16 @@ operations, simplicial sets, classifying spaces, and spectral sequences.
         </p>
     
     <h4><li>Universal Property of K-theory and Grothendieck-Riemann-Roch Theorem</li></h4>
-    <p class="w3-justify>
+    <p class="w3-justify">
               This is a survey on the Grothendieck-Riemann-Roch theorem.
 The idea of this article is to show that K-
 theory is the universal cohomology theory with multiplicative law $x+y-xy+\infty$ ,
 then Grothendieck-Riemann-Roch theorem follows the result.
               </p>
+              
+              <p class="w3-justify">
+         <a style="color: #447ec9" href="data/GRR.pdf">Download document</a>
+        </p>
 
   
   <!-- The Talks Section -->
