--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </div>
   <div class="w3-padding-64 w3-text-light-grey w3-large w3-teal" style="font-weight:bold">
     <a href="#home" class="w3-bar-item w3-button">Home</a>
-    <a href="#research interests" class="w3-bar-item w3-button">Reserach Interests</a>
+    <a href="#research interests" class="w3-bar-item w3-button">Reserach</a>
     <a href="#survey" class="w3-bar-item w3-button">Survey</a>
     <a href="#talks" class="w3-bar-item w3-button">Talks</a>
 <!--     <a href="#publications" class="w3-bar-item w3-button">Research</a> -->
@@ -180,8 +180,8 @@ then Grothendieck-Riemann-Roch theorem follows the result.
   <!-- The Talks Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="talks">
     <h2>Talks</h2>
-      <p><li> 06/2020, "<a href="http://valser.org/webinar/slide/slides/20200603/%E6%A8%A1%E5%9E%8B%E5%8E%8B%E7%BC%A9-%E5%B7%A5%E4%B8%9A%E7%95%8C%E5%92%8C%E5%AD%A6%E6%9C%AF%E7%95%8C%E7%9A%84%E5%B7%AE%E5%BC%82.pdf">AI on the Edge - Discussion on the Gap Between Industry and Academia</a>" at <a  href="http://valser.org/"><strong>VALSE</strong></a> Webinar.</li></p>
-      <p><li> 05/2020, "<a href="https://www.bilibili.com/video/av925692420/"> Edge AI: Progress and Future Directions</a>" at <a href="https://www.qbitai.com/"> <strong>QbitAI</strong></a> using <a  href="https://www.bilibili.com/"><strong>bilibili</strong></a>.</li></p>
+      <p><li> 06/2021, <a href= "data/PoweOperationsInOrdinaryCohomology.pdf">Power Operations in Ordinary Cohomology</a>" at <a href="https://sustech-topology.github.io/grad.html" target="_blank"> Graduate topology seminar</a>, 
+  SUSTech, Shenzhen.</li></p>
   </div>
  <!-- The Publications Section -->
 <!--   <div class="w3-container w3-padding-32"" id="publications">
