--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ operations, simplicial sets, classifying spaces, and spectral sequences.
     <p class="w3-justify">
               This is a survey on the Grothendieck-Riemann-Roch theorem.
 The idea of this article is to show that K-
-theory is the universal cohomology theory with multiplicative law $x+y-xy+\infty$ ,
+theory is the universal cohomology theory with multiplicative law $x+y-xy$ ,
 then Grothendieck-Riemann-Roch theorem follows the result.
               </p>
               
@@ -166,7 +166,7 @@ then Grothendieck-Riemann-Roch theorem follows the result.
          <a style="color: #447ec9" href="data/GRR.pdf">Download document</a>
         </p>
     
-    <h4><li>Class Groups and Riemman-Roch Theorem: An Brief Introduction to Algebraic Geometry (2020)</li></h4>
+    <h4><li>Class Groups and Riemman-Roch Theorem: A Brief Introduction to Algebraic Geometry (2020)</li></h4>
     <p class="w3-justify">
               Class groups and Riemann-Roch theorem are basic notion and theorems in arithmetic and algebra. I will introduce them in a geometric or topological way by using the language of schemes. First, we may turn arithmetical and algebraic objects (rings and modules) into geometric and topological objects (schemes and quasicoherent sheaves), then we use the methods of algebraic topology ((co)homology) to study them. We will see some theories in algebraic topology have an algebraic geometry version, which are very powerful.
               </p>
@@ -189,13 +189,13 @@ then Grothendieck-Riemann-Roch theorem follows the result.
 </div> -->
 
 <!-- The Services Section -->
-  <div class="w3-container w3-light-grey w3-padding-32" id="service">
+  <div class="w3-container w3-padding-32" id="service">
     <h2>Services</h2>
       <p><li> Teaching assistant for <a href="https://yifeizhu.github.io/8021/">MAT8021</a>(Algebraic topology).</p>
   </div>
 
   <!-- The Education Section -->
-  <div class="w3-container w3-padding-32" id="education">
+  <div class="w3-container  w3-light-grey w3-padding-32" id="education">
     <h2>Education</h2>
     <p><li> 2017-2021, Bachelor of Math, Southern University of Science and Technology</a></p>  
     <p><li> 2019-2021, Honor Programme in the Department of Mathematics, Southern University of Science and Technology</a></p>                                                       <p><li> 2014-2017, High school, Shenzhen middle school</a></p>               
