--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@ then Grothendieck-Riemann-Roch theorem follows the result.
   <!-- The Talks Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="talks">
     <h2>Talks</h2>
-      <p><li> 06/2021, <a href= "data/PoweOperationsInOrdinaryCohomology.pdf">Power Operations in Ordinary Cohomology</a>" at <a href="https://sustech-topology.github.io/grad.html" target="_blank"> Graduate topology seminar</a>, 
-  SUSTech, Shenzhen.</li></p>
+      <p><li> 06/2021, "Power Operations in Ordinary Cohomology" at <a href="https://sustech-topology.github.io/grad.html" target="_blank"> Graduate topology seminar</a>, 
+  SUSTech, Shenzhen.[ <a href= "data/PoweOperationsInOrdinaryCohomology.pdf">Slides </a>]</li></p>
   </div>
  <!-- The Publications Section -->
 <!--   <div class="w3-container w3-padding-32"" id="publications">
