--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <!-- The News Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="research interests">
    <h2>Research Interests</h2>
-      <p>Iam insterested in algebraic topology and its applications on motivic theory and quantum theory.</p>
+      <p>I am insterested in algebraic topology and its applications on motivic theory and quantum theory.</p>
       <p><li>Operad theory and higher category theory </li></p>
       <p><li>Motivic homotopy theory </li></p>
       <p><li>K-theory </li></p>
@@ -190,13 +190,13 @@ then Grothendieck-Riemann-Roch theorem follows the result.
   <div class="w3-container w3-light-grey w3-padding-32" id="talks">
     <h2>Talks</h2>
       <p><li> 06/2021, "Power Operations in Ordinary Cohomology" at <a href="https://sustech-topology.github.io/grad.html" target="_blank"> Graduate topology seminar</a>, 
-  SUSTech, Shenzhen.[ <a href= "data/PoweOperationsInOrdinaryCohomology.pdf">Slides </a>]</li></p>
+  SUSTech, Shenzhen.[ <a style="color: #447ec9" href= "data/PoweOperationsInOrdinaryCohomology.pdf">Slides </a>]</li></p>
      <p><li> 05/2021, "The Steenrod Squares Encodes the Data of Homotopy Coherent Structures" at oral dense for bachelor's degree, 
-  SUSTech, Shenzhen.[ <a href= "data/PowerOperations.pdf">Slides </a>]</li></p>
+  SUSTech, Shenzhen.[ <a style="color: #447ec9" href= "data/PowerOperations.pdf">Slides </a>]</li></p>
     <p><li> 05/2021, "Homotopy Coherence Problems and Infinity categories" at <a href="https://sustech-topology.github.io/grad.html" target="_blank"> Graduate topology seminar</a>, 
-  SUSTech, Shenzhen.[ <a href= "data/HomotopyCoherence.pdf">Slides </a>]</li></p>
+  SUSTech, Shenzhen.[ <a style="color: #447ec9" href= "data/HomotopyCoherence.pdf">Slides </a>]</li></p>
     <p><li> 03/2021, "An Introduction to Steenrod Operations" at SUSTech & USTC(University of Science and Technology of China) Student Meeting, 
-  SUSTech, Shenzhen.[ <a href= "data/HomotopyCoherence.pdf">Slides </a>]</li></p>
+  SUSTech, Shenzhen.[ <a style="color: #447ec9" href= "data/SteenrodOperations.pdf">Slides </a>]</li></p>
     
   </div>
  <!-- The Publications Section -->
