--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/Mypicture.jpg">
       <h1>Tongtong Liang</h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          I am a senior student at <a href="https://math.sustech.edu.cn/index.html?lang=en">Department of Mathematics </a> in <a href="https://math.sustech.edu.cn/?lang=en">Southern University of Science and Technology</a>(SUSTech), Shenzhen (2017-2021) and I will be a master student at Department of mathematics in SUSTech from 2021 to 2022. My ungraduate advisor and master advisor is <a href="https://yifeizhu.github.io/" target="_blank">
+          I am a senior student at <a href="https://math.sustech.edu.cn/index.html?lang=en">Department of Mathematics </a> in <a href="https://math.sustech.edu.cn/?lang=en">Southern University of Science and Technology</a>(SUSTech), Shenzhen (2017-2021) and I will be a master student at Department of mathematics in SUSTech from 2021 to 2023. My undergraduate advisor and master advisor is <a href="https://yifeizhu.github.io/" target="_blank">
   Yifei Zhu</a>.
         </p>
         <p class="w3-center">
@@ -127,7 +127,7 @@ Especially, I am concerned about cohomology operations and their applications in
   </div>
 <!-- The Projects Section -->
   <div class="w3-container w3-padding-32" id="survey">
-    <h2>Survey</h2>
+    <h2>Survey and Notes</h2>
     <p class="w3-justify">
         
     </p>
