--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <a href="#survey" class="w3-bar-item w3-button">Survey</a>
     <a href="#talks" class="w3-bar-item w3-button">Talks</a>
 <!--     <a href="#publications" class="w3-bar-item w3-button">Research</a> -->
-    <a href="#service" class="w3-bar-item w3-button">Services</a>
+    <a href="#teaching" class="w3-bar-item w3-button">Teaching</a>
     <a href="#education" class="w3-bar-item w3-button">Education</a>
   </div>
 </nav>
@@ -99,7 +99,7 @@
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/Mypicture.jpg">
       <h1>Tongtong Liang</h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          I am a senior student at <a href="https://math.sustech.edu.cn/index.html?lang=en">Department of Mathematics </a> in <a href="https://math.sustech.edu.cn/?lang=en">Southern University of Science and Technology</a>(SUSTech), Shenzhen (2017-2021) and I will be a master student at Department of mathematics in SUSTech from 2021 to 2023. My undergraduate advisor and master advisor is <a href="https://yifeizhu.github.io/" target="_blank">
+          I am a senior student at <a href="https://math.sustech.edu.cn/index.html?lang=en">Department of Mathematics </a> in <a href="https://www.sustech.edu.cn/en/">Southern University of Science and Technology</a>(SUSTech), Shenzhen (2017-2021) and I will be a master student at Department of mathematics in SUSTech from 2021 to 2023. My undergraduate advisor and master advisor is <a href="https://yifeizhu.github.io/" target="_blank">
   Yifei Zhu</a>.
         </p>
         <p class="w3-center">
@@ -204,9 +204,9 @@ then Grothendieck-Riemann-Roch theorem follows the result.
   
 </div> -->
 
-<!-- The Services Section -->
-  <div class="w3-container w3-padding-32" id="service">
-    <h2>Services</h2>
+<!-- The Teaching Section -->
+  <div class="w3-container w3-padding-32" id="teaching">
+    <h2>Teaching</h2>
       <p><li> Teaching assistant for <a href="https://yifeizhu.github.io/8021/">MAT8021</a>(Algebraic topology).</p>
   </div>
 
