--- a/index.html
+++ b/index.html
@@ -221,10 +221,8 @@ then Grothendieck-Riemann-Roch theorem follows the result.
 
   <div class="w3-light-grey w3-center w3-padding-24">
 
-    Welcome to use this website's <a href="https://github.com/tongtongliang/HomePage-1">source code</a>, just add a link back to here. <a href="https://tongtongliang.github.io/HomePage-1">&#10025;</a></br>
+    Welcome to use this website's <a href="https://github.com/tongtongliang/tongtongliang.github.io">source code</a>, just add a link back to here. <a href="https://tongtongliang.github.io">&#10025;</a></br>
 
-  <!-- Default Statcounter code for Yunhe Wang's Homepage
-  https://www.wangyunhe.site -->
 <!--   No.
   <script type="text/javascript">
   var sc_project=12347113; 
