--- a/research/index.html
+++ b/research/index.html
@@ -67,7 +67,7 @@
 <!--   <div class="w3-container w3-display-container w3-teal w3-padding-16">
     <h3><b>Tongtong Liang</b></h3>
   </div> -->
-  <div class="w3-padding-64 w3-text-light-grey w3-large w3-teal" style="font-weight:bold">
+  <div class="w3-padding-64 w3-text-light-grey w3-teal" style="font-weight:bold">
     <a href="#operad" class="w3-bar-item w3-button">Operad Theory</a>
     <a href="#motivic" class="w3-bar-item w3-button">Motivic World</a>
     <a href="#quantum" class="w3-bar-item w3-button">Quantum World</a>
