--- a/research/index.html
+++ b/research/index.html
@@ -60,9 +60,9 @@
         Questions on AT <i class="fa fa-caret-down"></i>
       </button>
       <div id="demo" class="w3-dropdown-content w3-bar-block w3-card">
-        <a href="#" class="w3-bar-item w3-button">Link 1</a>
-        <a href="#" class="w3-bar-item w3-button">Link 2</a>
-        <a href="#" class="w3-bar-item w3-button">Link 3</a>
+        <a href="#at" class="w3-bar-item w3-button">Link 1</a>
+        <a href="#ag" class="w3-bar-item w3-button">Link 2</a>
+        <a href="#ktheory" class="w3-bar-item w3-button">Link 3</a>
       </div>
     </div>
   </div>
