--- a/research/index.html
+++ b/research/index.html
@@ -20,6 +20,7 @@
   <meta name="author" content="Tongtong Liang" />
 
   <link rel="stylesheet" href="w3.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <style>
   .w3-sidebar a {font-family: "Roboto", sans-serif}
@@ -50,6 +51,8 @@
 
   </div>
 </nav>
+  
+  <!-- 上端导航栏-->
 <div class="w3-bar w3-light-grey">
     <a href="#operad" class="w3-bar-item w3-button">Operad Theory</a>
     <a href="#motivic" class="w3-bar-item w3-button">Motivic World</a>
