--- a/research/index.html
+++ b/research/index.html
@@ -129,6 +129,9 @@ function myFunction() {
       <h3>Operad Theory</h3>
         <pre><code>f(x)=\int_{-\infty}^\infty\widehat f\xi\,e^{2\pi i\xi x}\,d\xi
 </code></pre>
+        
+        katex.render("x=\\frac{-b\\pm\\sqrt{b^2-4ac}}{2a}", document.getElementById("math"));
+
       <p><li>The original idea: <a href="Homtopy Everything H-Spaces.pdf">Homtopy Everything H-Spaces </a>,Boardman-Vogt;</li></p> 
         
       <p><li>Peter May's construction of operad (operator + monad): <a href="1972 The Geometry of Iterated Loop Spaces.pdf">The Geometry of Iterated Loop Spaces.</a> The key points in this paper: littile n-cubes operads, two-side bar constructions and recognization principle (the equivalence between $E_n$-spaces and n-loop spaces). In particular, this shows that the notion of May spectrum, the notion of $`E_\infty`$-space and the notion of infinite loop spaces are equivalent.</li></p>
