--- a/research/index.html
+++ b/research/index.html
@@ -49,10 +49,10 @@
 <body class="w3-content" style="max-width:1000px">
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-bar-block w3-teal w3-collapse w3-top w3-right" style="z-index:3;width:150px" id="mySidebar">
-<!--   <div class="w3-container w3-display-container w3-teal w3-padding-16">
+<!-- <nav class="w3-sidebar w3-bar-block w3-teal w3-collapse w3-top w3-right" style="z-index:3;width:150px" id="mySidebar">
+   <div class="w3-container w3-display-container w3-teal w3-padding-16">
     <h3><b>Tongtong Liang</b></h3>
-  </div> -->
+  </div>
   <div class="w3-padding-64 w3-text-light-grey w3-teal" style="font-weight:bold">
     <a href="#operad" class="w3-bar-item w3-button">Operad Theory</a>
     <a href="#motivic" class="w3-bar-item w3-button">Motivic World</a>
@@ -64,7 +64,7 @@
     <a href="#misc" class="w3-bar-item w3-button">Miscellany</a>
 
   </div>
-</nav>
+</nav> -->
   
   <!-- 上端导航栏-->
 <div class="w3-bar w3-light-grey">
