--- a/index.html
+++ b/index.html
@@ -142,9 +142,22 @@ Especially, I am concerned with cohomology operations and their applications in 
     <p>Methods of algebraic topology (generalized cohomology theories, (un)stable homotopy theory, etc) in algebraic topology and arithmetic:</p>
      <table class="w3-table">
     <tr>
-      <th>Topological space</th>
-      <th>Motivic space</th>
+      <th>Topological spaces</th>
+      <th>Motivic spaces</th>
     </tr>
+        <tr>
+      <td>$[0,1]$</td>
+      <td>$\mathbb{A}^1$</td>
+    </tr>
+       <tr>
+      <td>Homotopy</td>
+      <td>$\mathbb{A}^1$-Homotopy</td>
+    </tr>
+        <tr>
+      <td>Cobordism</td>
+      <td>Algebraic cobordism</td>
+    </tr>
+ 
     <tr>
       <td>Singular cohomology</td>
       <td>Motivic cohomology</td>
@@ -153,18 +166,7 @@ Especially, I am concerned with cohomology operations and their applications in 
       <td>Topological K-theory</td>
       <td>Algebraic K-theory</td>
     </tr>
-      <tr>
-      <td>Cobordism</td>
-      <td>Algebraic cobordism</td>
-    </tr>
-    <tr>
-      <td>$[0,1]$</td>
-      <td>$\mathbb{A}^1$</td>
-    </tr>
-       <tr>
-      <td>Homotopy</td>
-      <td>$\mathbb{A}^1$-homotopy</td>
-    </tr>
+     
       <tr>
       <td>Atiyah-Hirzebruch spectral sequences</td>
       <td>Motivic Atiyah-Hirzebruch spectral sequences</td>
@@ -268,29 +270,6 @@ then Grothendieck-Riemann-Roch theorem follows the result.
 
   </div>  
 
-  <div class="w3-light-grey w3-center w3-padding-24">
-
-    Welcome to use this website's <a href="https://github.com/tongtongliang/tongtongliang.github.io">source code</a>, just add a link back to here. <a href="https://tongtongliang.github.io">&#10025;</a></br>
-
-<!--   No.
-  <script type="text/javascript">
-  var sc_project=12347113; 
-  var sc_invisible=0; 
-  var sc_security="21aca5d1"; 
-  var sc_https=1; 
-  var scJsHost = "https://";
-  document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
-  "statcounter.com/counter/counter.js'></"+"script>");
-  </script> Visitor Since Jun 2021. Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a>
-  <noscript>
-    <div class="statcounter"><a title="Web Analytics Made Easy -
-  StatCounter" href="https://statcounter.com/" target="_blank"><img
-  class="statcounter" src="https://c.statcounter.com/12347113/0/21aca5d1/0/"
-  alt="Web Analytics Made Easy - StatCounter"></a></div>
-  </noscript> -->
-  <!-- End of Statcounter Code -->
-
-  </div>
 
   <!-- End page content -->
 </div>
