--- a/research/index.html
+++ b/research/index.html
@@ -77,11 +77,12 @@
         Algebraic Topology <i class="fa fa-caret-down"></i>
       </button>
       <div id="demo" class="w3-dropdown-content w3-bar-block w3-card">
-        <a href="#operadtheory" class="w3-bar-item w3-button">Operad Theory</a>
         <a href="#poweroperation" class="w3-bar-item w3-button">Power Operations</a>
-        <a href="#ktheory" class="w3-bar-item w3-button">Stable Homotopy Theory</a>
+        <a href="#operadtheory" class="w3-bar-item w3-button">Operad Theory</a>
+        <a href="#stable" class="w3-bar-item w3-button">Stable Homotopy Theory</a>
       </div>
     </div>
+  <a href="#motivic" class="w3-bar-item w3-button">Motivic World</a>
   </div>
   
   <script>
@@ -139,6 +140,9 @@ function myFunction() {
   
         <p><li>Tayler Lawson: <a style="color:#447ec9" href="https://arxiv.org/pdf/2002.03889.pdf
 ">$E_n$ ring spectra and Dyer–Lashof operations</a>. </li></p>
+   
+       <p><li>Charles Rezk: <a style="color:#447ec9" href="Lectures on power operations.pdf
+">Lectures on power operations</a>. This lecture note begin with power operations on equivariant K-theory.</li></p>
    
            <p><li>知乎用户@brabeeba: <a style="color:#447ec9" href="https://www.zhihu.com/question/265308226/answer/364643763
 ">"Homology 和 Homotopy 能在多大程度上完全决定一个流形的拓扑？"</a>
@@ -228,9 +232,8 @@ via model categories</a>. The viewpoint from model categories.</li></p>
 <!-- The motivic Section -->
   <div class="w3-container w3-padding-32" id="motivic">
     <h2>Motivic World</h2>
-    <p class="w3-justify">
-        
-    </p>
+     <p><li>Voevodsky-Morel: <a style="color:#447ec9" href="Morel-Voevodsky1999_Article_A1-homotopyTheoryOfSchemes.pdf">$\mathbb{A}^1$-homotopy Theory of Schemes</a>. The origin paper of motivic homotopy theory.</li></p>   
+
 
         
   
@@ -280,30 +283,7 @@ via model categories</a>. The viewpoint from model categories.</li></p>
 
   </div>  
 
-  <div class="w3-light-grey w3-center w3-padding-24">
-
-    Welcome to use this website's <a href="https://github.com/tongtongliang/tongtongliang.github.io">source code</a>, just add a link back to here. <a href="https://tongtongliang.github.io">&#10025;</a></br>
-
-<!--   No.
-  <script type="text/javascript">
-  var sc_project=12347113; 
-  var sc_invisible=0; 
-  var sc_security="21aca5d1"; 
-  var sc_https=1; 
-  var scJsHost = "https://";
-  document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
-  "statcounter.com/counter/counter.js'></"+"script>");
-  </script> Visitor Since Jun 2021. Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a>
-  <noscript>
-    <div class="statcounter"><a title="Web Analytics Made Easy -
-  StatCounter" href="https://statcounter.com/" target="_blank"><img
-  class="statcounter" src="https://c.statcounter.com/12347113/0/21aca5d1/0/"
-  alt="Web Analytics Made Easy - StatCounter"></a></div>
-  </noscript> -->
-  <!-- End of Statcounter Code -->
-
-  </div>
-
+  
   <!-- End page content -->
 </div>
 
