--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <!-- The News Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="research interests">
    <h2>Research Interests</h2>
-      <p>I am insterested in algebraic topology and algebraic geometry, especially homotopy theory and its applications.     
+      <p>I am insterested in algebraic topology and algebraic geometry, especially homotopy theory and its applications. I am learning motivic homotopy theory and related topics now.
 
   </div>
 
