--- a/index.html
+++ b/index.html
@@ -218,15 +218,15 @@ then Grothendieck-Riemann-Roch theorem follows the result.
     <h2>Teaching</h2>
     <p><li> Teaching assistant for MA213-16(Mathematical analysis), 2021 Fall.</p>
   </div>
-      <p><li> Grader for <a href="https://yifeizhu.github.io/8021/">MAT8021</a>(Algebraic topology), 2021 Spring.</p>
+    <p><li> Grader for <a href="https://yifeizhu.github.io/8021/">MAT8021</a>(Algebraic topology), 2021 Spring.</p>
   </div>
 
   <!-- The Education Section -->
   <div class="w3-container  w3-light-grey w3-padding-32" id="education">
     <h2>Education</h2>
-    <p><li> 2021-Now, Master of Math, Southern University of Science and Technology</a></p>  
+    <p><li> 2021-Now, Master in Mathematics, Southern University of Science and Technology</a></p>  
     <p><li> 2019-2021, Honor Programme in the Department of Mathematics, Southern University of Science and Technology</a></p>    
-    <p><li> 2017-2021, Bachelor of Math, Southern University of Science and Technology</a></p>  
+    <p><li> 2017-2021, Bachelor in Mathematics, Southern University of Science and Technology</a></p>  
 
 
 
