--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/Mypicture.jpg">
       <h1>Tongtong Liang</h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          I am a master student at <a href="https://math.sustech.edu.cn/index.html?lang=en">Department of Mathematics </a> in <a href="https://www.sustech.edu.cn/en/">Southern University of Science and Technology</a>(SUSTech), Shenzhen (2021-2023) and I suppose to graduate in June, 2023. My advisor is <a href="https://yifeizhu.github.io/" target="_blank">
+          I am a master student at <a href="https://math.sustech.edu.cn/index.html?lang=en">Department of Mathematics </a> in <a href="https://www.sustech.edu.cn/en/">Southern University of Science and Technology</a>(SUSTech), Shenzhen and I suppose to graduate in June, 2023. My advisor is <a href="https://yifeizhu.github.io/" target="_blank">
   Yifei Zhu</a>.
         </p>
         <p class="w3-center">
