--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/Mypicture.jpg">
       <h1>Tongtong Liang</h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          I am a master student at <a href="https://math.sustech.edu.cn/index.html?lang=en">Department of Mathematics </a> in <a href="https://www.sustech.edu.cn/en/"> Southern University of Science and Technology</a>(SUSTech), Shenzhen and I expect to graduate in June, 2023. My advisor is <a href="https://yifeizhu.github.io/" target="_blank">
+          I am a master student at <a href="https://math.sustech.edu.cn/index.html?lang=en">Department of Mathematics </a> in <a href="https://www.sustech.edu.cn/en/"> Southern University of Science and Technology</a> (SUSTech), Shenzhen and I expect to graduate in June, 2023. My advisor is <a href="https://yifeizhu.github.io/" target="_blank">
   Yifei Zhu</a>.
         </p>
         <p class="w3-center">
@@ -200,17 +200,17 @@ then Grothendieck-Riemann-Roch theorem follows the result.
     <h2>Talks</h2>
      <p><li> 07/2022, "Methods of Homotopy Theory in Algebraic Geometry
 from the Viewpoint of Cohomology Operations" at dissertation proposal defense, 
-  SUSTech.[ <a style="color: #447ec9" href= "https://sustech-topology.github.io/grad/22sum/ltt.pdf">Slides </a>]</li></p>
+  SUSTech.<a style="color: #447ec9" href= "https://sustech-topology.github.io/grad/22sum/ltt.pdf">Slides </a></li></p>
     
      <p><li> 06/2021, "Power Operations in Ordinary Cohomology" at <a href="https://sustech-topology.github.io/grad/" target="_blank"> Graduate topology seminar</a>, 
-  SUSTech.[ <a style="color: #447ec9" href= "data/PoweOperationsInOrdinaryCohomology.pdf">Slides </a>]</li></p>
+  SUSTech.<a style="color: #447ec9" href= "data/PoweOperationsInOrdinaryCohomology.pdf">Slides </a></li></p>
      <p><li> 05/2021, "The Steenrod Squares Encodes the Data of Homotopy Coherent Structures" at oral defense for undergraduate thesis, 
-  SUSTech.[ <a style="color: #447ec9" href= "data/PowerOperations.pdf">Slides </a>]</li></p>
-    <p><li> 05/2021, "Homotopy Coherence Problems and Infinity categories" at <a href="https://sustech-topology.github.io/grad/" target="_blank"> Graduate topology seminar</a>, 
+  SUSTech.<a style="color: #447ec9" href= "data/PowerOperations.pdf">Slides </a></li></p>
+    <p><li> 05/2021, "Homotopy Coherence Problems and Infinity categories" at <a href="https://sustech-topology.github.io/grad/" target="_blank"> Graduate topology seminar</a>, SUSTech.<a style="color: #447ec9" href= "https://sustech-topology.github.io/grad/21spr/hmtp-coh-infty-cat.pdf">Slides</a> 
      <p><li> 04/2021, "An Introduction to Spectral Sequences" at <a href="https://sustech-topology.github.io/grad/" target="_blank"> Graduate topology seminar</a>, 
   SUSTech.</li></p>
     <p><li> 03/2021, "An Introduction to Steenrod Operations" at SUSTech & USTC Students Meeting, 
-  SUSTech.[ <a style="color: #447ec9" href= "data/SteenrodOperations.pdf">Slides </a>]</li></p>
+  SUSTech.<a style="color: #447ec9" href= "data/SteenrodOperations.pdf">Slides</a></li></p>
     
   </div>
  <!-- The Publications Section -->
@@ -230,10 +230,6 @@ from the Viewpoint of Cohomology Operations" at dissertation proposal defense,
     <p><li> 2021-Now, Master in Mathematics (expected June 2023), Southern University of Science and Technology</a></p>  
     <p><li> 2017-2021, Bachelor in Mathematics with Honors, Southern University of Science and Technology</a></p>  
     <p><li> 2014-2017, Shenzhen Middle School</a></p>  
-
-
-
-
   </div>  
 
 
