--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <a href="#home" class="w3-bar-item w3-button">Home</a>
     <a href="#research interests" class="w3-bar-item w3-button">Research</a>
     <a href="#writing" class="w3-bar-item w3-button">Writing</a>
-    <a href="#talks" class="w3-bar-item w3-button">Talks</a>
+    <a href="#presentations" class="w3-bar-item w3-button">Presentations</a>
 <!--     <a href="#publications" class="w3-bar-item w3-button">Research</a> -->
     <a href="#teaching" class="w3-bar-item w3-button">Teaching</a>
     <a href="#education" class="w3-bar-item w3-button">Education</a>
@@ -196,21 +196,21 @@ then Grothendieck-Riemann-Roch theorem follows the result.
 
   
   <!-- The Talks Section -->
-  <div class="w3-container w3-light-grey w3-padding-32" id="talks">
-    <h2>Talks</h2>
+  <div class="w3-container w3-light-grey w3-padding-32" id="presentations">
+    <h2>Presentations</h2>
      <p><li> 07/2022, "Methods of Homotopy Theory in Algebraic Geometry
 from the Viewpoint of Cohomology Operations" at dissertation proposal defense, 
-  SUSTech.<a style="color: #447ec9" href= "https://sustech-topology.github.io/grad/22sum/ltt.pdf">Slides </a></li></p>
+  SUSTech. <a style="color: #447ec9" href= "https://sustech-topology.github.io/grad/22sum/ltt.pdf">Slides </a></li></p>
     
      <p><li> 06/2021, "Power Operations in Ordinary Cohomology" at <a href="https://sustech-topology.github.io/grad/" target="_blank"> Graduate topology seminar</a>, 
-  SUSTech.<a style="color: #447ec9" href= "data/PoweOperationsInOrdinaryCohomology.pdf">Slides </a></li></p>
+  SUSTech. <a style="color: #447ec9" href= "data/PoweOperationsInOrdinaryCohomology.pdf">Slides </a></li></p>
      <p><li> 05/2021, "The Steenrod Squares Encodes the Data of Homotopy Coherent Structures" at oral defense for undergraduate thesis, 
-  SUSTech.<a style="color: #447ec9" href= "data/PowerOperations.pdf">Slides </a></li></p>
-    <p><li> 05/2021, "Homotopy Coherence Problems and Infinity categories" at <a href="https://sustech-topology.github.io/grad/" target="_blank"> Graduate topology seminar</a>, SUSTech.<a style="color: #447ec9" href= "https://sustech-topology.github.io/grad/21spr/hmtp-coh-infty-cat.pdf">Slides</a> 
+  SUSTech. <a style="color: #447ec9" href= "data/PowerOperations.pdf">Slides </a></li></p>
+    <p><li> 05/2021, "Homotopy Coherence Problems and Infinity categories" at <a href="https://sustech-topology.github.io/grad/" target="_blank"> Graduate topology seminar</a>, SUSTech. <a style="color: #447ec9" href= "https://sustech-topology.github.io/grad/21spr/hmtp-coh-infty-cat.pdf">Slides</a> 
      <p><li> 04/2021, "An Introduction to Spectral Sequences" at <a href="https://sustech-topology.github.io/grad/" target="_blank"> Graduate topology seminar</a>, 
-  SUSTech.</li></p>
+  SUSTech. </li></p>
     <p><li> 03/2021, "An Introduction to Steenrod Operations" at SUSTech & USTC Students Meeting, 
-  SUSTech.<a style="color: #447ec9" href= "data/SteenrodOperations.pdf">Slides</a></li></p>
+  SUSTech. <a style="color: #447ec9" href= "data/SteenrodOperations.pdf">Slides</a></li></p>
     
   </div>
  <!-- The Publications Section -->
