--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 <!--     <a href="#publications" class="w3-bar-item w3-button">Research</a> -->
     <a href="#teaching" class="w3-bar-item w3-button">Teaching</a>
     <a href="#education" class="w3-bar-item w3-button">Education</a>
+    <a href="#service" class="w3-bar-item w3-button">Service</a>
   </div>
 </nav>
 
@@ -252,7 +253,8 @@ from the Viewpoint of Cohomology Operations", master project proposal,
     <h2>Teaching</h2>
     <p><li> Teaching assistant for MA213-16 (Mathematical analysis), Fall 2021.</p>
     <p><li> Grader for <a href="https://yifeizhu.github.io/8021/">MAT8021</a> (Algebraic topology), Spring 2021.</p>
-
+</div>
+    
   <!-- The Education Section -->
   <div class="w3-container   w3-padding-32" id="education">
     <h2>Education</h2>
@@ -260,6 +262,17 @@ from the Viewpoint of Cohomology Operations", master project proposal,
     <p><li> 2017-2021, Bachelor in Mathematics with Honors, Southern University of Science and Technology</a></p>  
     <p><li> 2014-2017, Shenzhen Middle School</a></p>  
   </div>  
+
+</div>
+    
+  <!-- The Service Section -->
+  <div class="w3-container   w3-padding-32" id="service">
+    <h2>Service</h2>
+    <p><li> 2021-Now, Barista, Camerata Cafe, SUSTech</a></p>  
+    <p><li> 2021-Now, Student tutor, Learning Center, SUSTech</a></p>  
+    <p><li> 2020-Now, Sports rehabilitator, Combat club in SUSTech</a></p>  
+  </div>  
+
 
 
   <!-- End page content -->
