--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@ from the Viewpoint of Cohomology Operations", master project proposal,
   <!-- The Service Section -->
   <div class="w3-container   w3-padding-32" id="service">
     <h2>Service</h2>
-    <p><li> 2021-Now, Barista, Camerata Cafe, SUSTech</a></p>  
+    <p><li> 2021-Now, Barista, Camerata Coffee Community, SUSTech</a></p>  
     <p><li> 2021-Now, Student tutor, Learning Center, SUSTech</a></p>  
-    <p><li> 2020-Now, Sports rehabilitator, Combat club in SUSTech</a></p>  
+    <p><li> 2020-Now, Sports rehabilitator, Combat Club, SUSTech</a></p>  
   </div>  
 
     
