--- a/index.html
+++ b/index.html
@@ -228,6 +228,10 @@ then Grothendieck-Riemann-Roch theorem follows the result.
   <!-- The Talks Section -->
   <div class="w3-container  w3-padding-32" id="presentations">
     <h2>Presentations</h2>
+      <p><li> 10/2022, "A Proof of Quillen’s Theorem on Formal Group Laws using Power
+Operations" at <a href="https://sustech-topology.github.io/grad/" target="_blank"> Graduate topology seminar</a>, 
+  SUSTech. <a style="color: #447ec9" href= "data/QuillenSlides.pdf">Slides </a></li></p>
+    
      <p><li> 07/2022, "Methods of Homotopy Theory in Algebraic Geometry
 from the Viewpoint of Cohomology Operations", master project proposal, 
   SUSTech. <a style="color: #447ec9" href= "https://sustech-topology.github.io/grad/22sum/ltt.pdf">Slides </a></li></p>
