--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
      <h4><li>Methods of Homotopy Theory in Algebraic Geometry (master project proposal, 2022 Sept)</li></h4>
         
         <p class="w3-justify">
-          This article is an exposition on the homotopy-theoretic tools of cohomology operations applied to algebraic geometry and inner workings. We first survey on the construction and mechanism of cohomology operations in classical homotopy theory. Particularly, we aim to explain how these operations detect elements and relations in homotopy classes along the Adams spectral sequences. Next, in order to explore analogous mechanism of cohomology operations in algebraic geometry, we introduce the framework of motivic homotopy theory as constructed by Morel and Voevodsky. Based on this framework, we study the constructions and properties of motivic power operations and related spectral sequences in motivic stable homotopy theory. Specifically, we would like to understand how motivic power operations exhibit the coherence encoded by norms in motivic homotopy theory and how motivic extended powers emerge in the motivic Adams spectral sequences.
+          This article is an exposition on the homotopy-theoretic tools of cohomology operations applied to algebraic geometry and their inner workings. We first survey on the construction and mechanism of cohomology operations in classical homotopy theory. Particularly, we aim to explain how these operations detect elements and relations in homotopy classes along the Adams spectral sequences. Next, in order to explore analogous mechanism of cohomology operations in algebraic geometry, we introduce the framework of motivic homotopy theory as constructed by Morel and Voevodsky. Based on this framework, we study the constructions and properties of motivic power operations and related spectral sequences in motivic stable homotopy theory. Specifically, we would like to understand how motivic power operations exhibit the coherence encoded by norms in motivic homotopy theory and how motivic extended powers emerge in the motivic Adams spectral sequences.
         </p>
     <p class="w3-justify">
          <a style="color: #447ec9" href="data/MasterProposal.pdf">PDF</a>
@@ -228,8 +228,8 @@ then Grothendieck-Riemann-Roch theorem follows the result.
   <!-- The Talks Section -->
   <div class="w3-container  w3-padding-32" id="presentations">
     <h2>Presentations</h2>
-      <p><li> 10/2022, "A Proof of Quillen’s Theorem on Formal Group Laws using Power
-Operations" at <a href="https://sustech-topology.github.io/grad/" target="_blank"> Graduate topology seminar</a>, 
+      <p><li> 10/2022, "A Proof of Quillen's Theorem on Formal Group Laws using Power
+Operations (with some motivic remarks)" at <a href="https://sustech-topology.github.io/grad/" target="_blank"> Graduate topology seminar</a>, 
   SUSTech. <a style="color: #447ec9" href= "data/QuillenSlides.pdf">Slides </a></li></p>
     
      <p><li> 07/2022, "Methods of Homotopy Theory in Algebraic Geometry
