--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <a href="#home" class="w3-bar-item w3-button">Home</a>
     <a href="#research interests" class="w3-bar-item w3-button">Research</a>
     <a href="#writing" class="w3-bar-item w3-button">Writing</a>
-    <a href="#presentations" class="w3-bar-item w3-button">Presentations</a>
+    <a href="#presentations" class="w3-bar-item w3-button">Speaking</a>
 <!--     <a href="#publications" class="w3-bar-item w3-button">Research</a> -->
     <a href="#teaching" class="w3-bar-item w3-button">Teaching</a>
       <a href="#education" class="w3-bar-item w3-button">Education</a>
