--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
          <a style="color: #447ec9" href="data/MasterProposal.pdf">PDF</a>
         </p>
     
-       <h4><li>Power operations and Formal Group Laws in Complex Cobordism Theory (2022 Sept)</li></h4>
+       <h4><li>Power Operations and Formal Group Laws in Complex Cobordism Theory (2022 Sept)</li></h4>
         
         <p class="w3-justify">
   This is a survey on Quillen's elementary proofs of some results of cobordism theory using power operations. We optimize the system of notations and clarify some vague arguments in Quillen's paper. Furthermore, we emphasize the relations among cobordism power operations, Landweber-Novikov operations and the formal group law associated to the complex cobordism theory. Particularly, we present a stable-homotopy-theoric construction of cobordism power operations in order to demonstrate the relations. Based on this, we give a different proof of Quillen's technical lemma by promoting a lemma in Rudyak's book from mod-2 case to mod-$p$ cases for all primes $p$.
