--- a/index.html
+++ b/index.html
@@ -228,6 +228,10 @@ then Grothendieck-Riemann-Roch theorem follows the result.
   <!-- The Talks Section -->
   <div class="w3-container  w3-padding-32" id="presentations">
     <h2>Speaking</h2>
+          <p><li> 12/2022, "Operads and the Recognition Principle" at <a href="https://sustech-topology.github.io/grad/" target="_blank"> Graduate topology seminar</a>, 
+  SUSTech. <a style="color: #447ec9" href= "data/OperadSlides.pdf">Slides </a></li></p>
+    
+    
       <p><li> 10/2022, "A Proof of Quillen's Theorem on Formal Group Laws using Power
 Operations (with some motivic remarks)" at <a href="https://sustech-topology.github.io/grad/" target="_blank"> Graduate topology seminar</a>, 
   SUSTech. <a style="color: #447ec9" href= "data/QuillenSlides.pdf">Slides </a></li></p>
