--- a/index.html
+++ b/index.html
@@ -118,11 +118,10 @@
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/Mypicture.jpg">
       <h1>Tongtong Liang</h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          I am a master student at <a href="https://math.sustech.edu.cn/index.html?lang=en">Department of Mathematics </a> in <a href="https://www.sustech.edu.cn/en/"> Southern University of Science and Technology</a> (SUSTech), Shenzhen and I expect to graduate in June, 2023. My advisor is <a href="https://yifeizhu.github.io/" target="_blank">
-  Yifei Zhu</a>.
+          I am a PhD student at University of Carlifornia, San Diego, advised by Zhouli Xu.
         </p>
         <p class="w3-center">
-          <a href="mailto:12132882@mail.sustech.edu.cn">Email</a> &nbsp/&nbsp <a href="data/CV.pdf"> CV<a/>
+          <a href="mailto:ttliang@ucsd.edu">Email</a> &nbsp/&nbsp <a href="data/CV.pdf"> CV<a/>
         </p>
         </tbody></table>
   </div>
@@ -130,7 +129,7 @@
 <!-- The News Section -->
   <div class="w3-container  w3-padding-32" id="research interests">
    <h2>Research Interests</h2>
-      <p>I am interested in algebraic topology and algebraic geometry, especially homotopy theory and its applications. I have been learning motivic homotopy theory and related topics.
+      <p>I am interested in algebraic topology and algebraic geometry, especially motivic homotopy theory and algebraic K-theory.
 
   </div>
 
@@ -270,7 +269,8 @@ from the Viewpoint of Cohomology Operations", master project proposal,
   <!-- The Education Section -->
   <div class="w3-container   w3-padding-32" id="education">
     <h2>Education</h2>
-    <p><li> 2021-Present, Master in Mathematics (expected June 2023), Southern University of Science and Technology</a></p>  
+    <p><li> 2023-present, Ph.D. in Mathematics, University of Carlifornia, San Diego</a></p>  
+    <p><li> 2021-2023, Master in Mathematics, Southern University of Science and Technology</a></p>  
     <p><li> 2017-2021, Bachelor in Mathematics with Honors, Southern University of Science and Technology</a></p>  
     <p><li> 2014-2017, Shenzhen Middle School</a></p>  
   </div>  
@@ -278,9 +278,9 @@ from the Viewpoint of Cohomology Operations", master project proposal,
   <!-- The Service Section -->
   <div class="w3-container   w3-padding-32" id="outreach">
     <h2>Outreach</h2>
-    <p><li> 2021-Present, Student tutor, Learning Center, SUSTech</a></p>  
-    <p><li> 2021-Present, Barista, Camerata Coffee Community, SUSTech</a></p>  
-    <p><li> 2020-Present, Sports rehabilitator, Combat Club, SUSTech</a></p>  
+    <p><li> 2021-2022, Student tutor, Learning Center, SUSTech</a></p>  
+    <p><li> 2021-2023, Barista, Camerata Coffee Community, SUSTech</a></p>  
+    <p><li> 2020-2022, Sports rehabilitator, Combat Club, SUSTech</a></p>  
   </div>  
 
 
